--- a/home.html
+++ b/home.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Find Meal For Your Ingredients</title>
+    <link rel="stylesheet"href="home.css">
+
 <script src="https://kit.fontawesome.com/10f9d75d30.js" crossorigin="anonymous"></script>  <link rel = "stylesheet" href = "home.css">
 </head>
 <body>
